--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,33 @@
+@font-face {
+  font-family: 'font1';
+  src:  url('/fonts/0138EU27.ttf') format('ttf'),
+  url('/fonts/0138EU27.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'font2';
+  src:  url('/fonts/0140EU27.ttf') format('ttf'),
+  url('/fonts/0140EU27.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'font3';
+  src:  url('/fonts/0144EU27.ttf') format('ttf'),
+  url('/fonts/0144EU27.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'font4';
+  src:  url('/fonts/0169EU27.ttf') format('ttf'),
+  url('/fonts/0169EU27.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'font5';
+  src:  url('/fonts/0300EU27.ttf') format('ttf'),
+  url('/fonts/0300EU27.woff') format('woff');
+}
+
 * {
   margin: 0;
   padding: 0;
