--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,7 +1,56 @@
 .site_home {
-  background: linear-gradient(158deg, rgb(255, 91, 94) 0%, rgb(255, 133, 55) 100%);
+  background: url("/img/backgrounds/home/chmury.png") repeat-x left -480px bottom -110px,
+                    url("/img/backgrounds/home/miasto.png") repeat-x left -271px bottom -35px,
+                    url("/img/backgrounds/home/home.png") no-repeat center;
+
+
+  background-size: contain, contain, cover;
+
 
   .container {
-    padding-top: 64px;
+    padding-top: 146px;
+    padding-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+
+    .home_phone {
+      margin-left: 48px;
+    }
+
+
+    .home_text {
+      max-width: 60%;
+      padding-right: 36px;
+      padding-left: 6px;
+      color: #fff;
+
+      h3 {
+        margin-top: 62px;
+        font-family: 'font2', Fallback, sans-serif;
+        letter-spacing: 0.5px;
+        font-weight: 300;
+        font-size: 47px;
+        span {
+          font-family: 'font3', Fallback, sans-serif;
+        }
+      }
+
+      p {
+        margin-top: 36px;
+        font-family: 'font2', Fallback, sans-serif;
+        letter-spacing: 0.5px;
+        line-height:22px;
+        text-align: justify;
+      }
+
+      div {
+        margin-top: 42px;
+        display: flex;
+
+        a:not(:first-of-type) {
+          margin-left: 8px;
+        }
+      }
+    }
   }
 }
