--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,8 +1,9 @@
 .site_menu {
-  position: fixed;
+  position: absolute;
   width: 100%;
   margin: 0 auto;
   top: 0;
+
 
   .container {
     height: 95px;
@@ -11,8 +12,35 @@
     align-items: center;
 
     .menu_logo {
-      margin-left: 3px;
+      margin-left: 5px;
     }
 
+    .menu_nav {
+      width: 50%;
+      margin-right: 28px;
+
+      ul {
+        list-style: none;
+        display: flex;
+        justify-content: space-between;
+
+        li {
+          font-family: 'font2', Fallback, sans-serif;
+          font-size: 24px;
+          letter-spacing: 1px;
+          width: 25%;
+
+          a {
+            text-align: center;
+            display: block;
+            width: 100%;
+            height: 100%;
+            padding: 10px;
+            text-decoration: none;
+            color: #fff;
+          }
+        }
+      }
+    }
   }
 }
