--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,7 +1,7 @@
 .site_home {
-  background: url("/img/backgrounds/home/chmury.png") repeat-x left -480px bottom -110px,
-                    url("/img/backgrounds/home/miasto.png") repeat-x left -271px bottom -35px,
-                    url("/img/backgrounds/home/home.png") no-repeat center;
+  background: url("../img/backgrounds/home/chmury.png") repeat-x left -480px bottom -110px,
+                    url("../img/backgrounds/home/miasto.png") repeat-x left -271px bottom -35px,
+                    url("../img/backgrounds/home/home.png") no-repeat center;
 
 
   background-size: contain, contain, cover;
