--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,20 +12,20 @@
 
 @font-face {
   font-family: 'font3';
-  src:  url('/fonts/0144EU27.ttf') format('ttf'),
-  url('/fonts/0144EU27.woff') format('woff');
+  src:  url('../fonts/0144EU27.ttf') format('ttf'),
+  url('../fonts/0144EU27.woff') format('woff');
 }
 
 @font-face {
   font-family: 'font4';
-  src:  url('/fonts/0169EU27.ttf') format('ttf'),
-  url('/fonts/0169EU27.woff') format('woff');
+  src:  url('../fonts/0169EU27.ttf') format('ttf'),
+  url('../fonts/0169EU27.woff') format('woff');
 }
 
 @font-face {
   font-family: 'font5';
-  src:  url('/fonts/0300EU27.ttf') format('ttf'),
-  url('/fonts/0300EU27.woff') format('woff');
+  src:  url('../fonts/0300EU27.ttf') format('ttf'),
+  url('../fonts/0300EU27.woff') format('woff');
 }
 
 * {
