--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'font1';
-  src:  url('/fonts/0138EU27.ttf') format('ttf'),
-  url('/fonts/0138EU27.woff') format('woff');
+  src:  url('../fonts/0138EU27.ttf') format('ttf'),
+  url('../fonts/0138EU27.woff') format('woff');
 }
 
 @font-face {
   font-family: 'font2';
-  src:  url('/fonts/0140EU27.ttf') format('ttf'),
-  url('/fonts/0140EU27.woff') format('woff');
+  src:  url('../fonts/0140EU27.ttf') format('ttf'),
+  url('../fonts/0140EU27.woff') format('woff');
 }
 
 @font-face {
