--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -2,10 +2,7 @@
   background: url("../img/backgrounds/home/chmury.png") repeat-x left -480px bottom -110px,
                     url("../img/backgrounds/home/miasto.png") repeat-x left -271px bottom -35px,
                     url("../img/backgrounds/home/home.png") no-repeat center;
-
-
-  background-size: contain, contain, cover;
-
+  background-size: auto, auto, cover;
 
   .container {
     padding-top: 146px;
