--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,10 @@
   box-sizing: border-box;
 }
 
+body {
+  position: relative;
+}
+
 img {
   max-width: 100%;
   display: block;
@@ -56,3 +60,5 @@ h2 {
 @import "home";
 @import "about";
 @import "support";
+@import "contact";
+@import "footer";
