--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -26,7 +26,7 @@
         font-family: 'font2', Fallback, sans-serif;
         letter-spacing: 0.5px;
         font-weight: 300;
-        font-size: 47px;
+        font-size: 4.7rem;
         span {
           font-family: 'font3', Fallback, sans-serif;
         }
@@ -35,8 +35,9 @@
       p {
         margin-top: 36px;
         font-family: 'font2', Fallback, sans-serif;
-        letter-spacing: 0.5px;
-        line-height:22px;
+        font-size: 1.8rem;
+        letter-spacing: 0.05rem;
+        line-height:2.2rem;
         text-align: justify;
       }
 
