--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -26,8 +26,8 @@
 
         li {
           font-family: 'font2', Fallback, sans-serif;
-          font-size: 24px;
-          letter-spacing: 1px;
+          font-size: 2.4rem;
+          letter-spacing: 0.1rem;
           width: 25%;
 
           a {
