--- a/scss/_support.scss
+++ b/scss/_support.scss
@@ -29,16 +29,16 @@
         h3 {
           font-family: 'font3', Fallback, sans-serif;
           font-weight: 100;
-          font-size: 30px;
+          font-size: 3rem;
         }
 
         p {
           margin-top: 36px;
           font-family: 'font2', Fallback, sans-serif;
           font-weight: 200;
-          font-size: 19px;
-          letter-spacing: 0.5px;
-          line-height:27px;
+          font-size: 1.9rem;
+          letter-spacing: 0.05rem;
+          line-height:2.7rem;
 
           span {
             font-family: 'font3', Fallback, sans-serif;
