--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -19,8 +19,8 @@
 
     h3 {
       font-family: 'font3', Fallback, sans-serif;
-      letter-spacing: 0.5px;
-      font-size: 28px;
+      letter-spacing: 0.05rem;
+      font-size: 2.8rem;
       margin-top: 40px;
       color: #FD6955;
     }
@@ -29,8 +29,8 @@
       font-family: 'font1', Fallback, sans-serif;
       text-align: center;
       padding: 0 40px;
-      letter-spacing: 0.5px;
-      font-size: 21px;
+      letter-spacing: 0.05rem;
+      font-size: 2.1rem;
       margin-top: 30px;
       color: #FD6955;
     }
