--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -15,7 +15,7 @@
       padding-bottom: 75px;
       color: #fff;
       font-family: 'font2', Fallback, sans-serif;
-      font-size: 18px;
+      font-size: 1.8rem;
     }
   }
 }
