--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,5 +1,5 @@
 .site_home {
-  background: url("../img/backgrounds/home/chmury.png") repeat-x left -480px bottom -110px,
+  background: url("../img/backgrounds/home/chmury.png") repeat-x center bottom -110px,
                     url("../img/backgrounds/home/miasto.png") repeat-x left -271px bottom -35px,
                     url("../img/backgrounds/home/home.png") no-repeat center;
   background-size: auto, auto, cover;
@@ -36,8 +36,8 @@
         margin-top: 36px;
         font-family: 'font2', Fallback, sans-serif;
         font-size: 1.8rem;
-        letter-spacing: 0.05rem;
-        line-height:2.2rem;
+        letter-spacing: 0.5px;
+        line-height: 22px;
         text-align: justify;
       }
 
