--- a/scss/_support.scss
+++ b/scss/_support.scss
@@ -1,5 +1,5 @@
 .site_support {
-  background:  url("../img/backgrounds/support/miasto copy.png") repeat-x center bottom -79px,
+  background:  url("../img/backgrounds/support/miasto copy.png") repeat-x left -185px bottom -79px,
                url("../img/backgrounds/support/blik.png") no-repeat left 31% top 25%,
                url("../img/backgrounds/support/blik2.png") no-repeat left 64% top 21%,
                url("../img/backgrounds/support/tlo.png") repeat-x center top;
