--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,16 +1,13 @@
 .site_about {
   h2 {
     margin-top: 88px;
-    margin-left: -62px;
   }
 }
 
 .about_items {
   display: flex;
-  margin-left: -62px;
 
-
-  div {
+  .about_item {
     width: 33.3333%;
     padding-top: 73px;
     display: flex;
@@ -33,6 +30,15 @@
       font-size: 2.1rem;
       margin-top: 30px;
       color: #FD6955;
+    }
+  }
+
+  @media (max-width: 800px) {
+    flex-direction: column;
+    align-items: center;
+
+    .about_item {
+      width: 90%;
     }
   }
 }
