--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -24,36 +24,28 @@
 
 
   .container {
-    h2 {
-      color: #fff;
-      padding-top: 81px;
-    }
     display: flex;
     align-items: center;
     flex-direction: column;
 
+    h2 {
+      color: #fff;
+      padding-top: 81px;
+    }
+
     .contact_social {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
       margin-top: 122px;
       margin-bottom: 180px;
-      margin-left: -66px;
-      a {
+
+      .social_icon {
         margin: 0 37px;
+        width: 73px;
+
       }
     }
   }
 }
-//
-//div {
-//  background-image: url(https://placeimg.com/640/480/any);
-//  margin: 20px auto;
-//  display: block;
-//  width: 100%;
-//  height: 400px;
-//  -webkit-mask-image: url(http://tympanus.net/codrops-playground/assets/images/cssref/properties/mask-image/mask-image.png);
-//  mask-image: url(http://tympanus.net/codrops-playground/assets/images/cssref/properties/mask-image/mask-image.png);
-//  -webkit-mask-position: center center;
-//  mask-position: center center;
-//  -webkit-mask-repeat: no-repeat;
-//  mask-repeat: no-repeat;
-//}
