--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -10,16 +10,38 @@
     display: flex;
     justify-content: space-between;
 
-    .home_phone {
-      margin-left: 48px;
+    @media (max-width: 900px) {
+      justify-content: center;
+      background: url("../img/backgrounds/home/_home_chmury.png") no-repeat center bottom -16vw,
+      url("../img/backgrounds/home/_home_miasto.png") no-repeat center bottom -35px,
+      url("../img/backgrounds/home/_home.png") no-repeat center;
+      background-size: contain, contain, cover;
     }
 
+    .home_phone {
+      margin-left: 48px;
+      margin-bottom: 10px;
+      margin-top: auto;
+
+      @media (max-width: 900px) {
+        display: none;
+      }
+    }
 
     .home_text {
       max-width: 60%;
       padding-right: 36px;
       padding-left: 6px;
+      padding-bottom: 100px;
+      margin-left: 20px ;
       color: #fff;
+
+      @media (max-width: 900px) {
+        max-width: 80%;
+        text-align: center;
+        padding-right: 0;
+        margin-left: 0;
+      }
 
       h3 {
         margin-top: 61px;
@@ -39,11 +61,18 @@
         letter-spacing: 0.5px;
         line-height:22px;
         text-align: justify;
+        @media (max-width: 750px) {
+          display: none;
+        }
       }
 
       div {
         margin-top: 42px;
         display: flex;
+        @media (max-width: 900px) {
+          justify-content: center;
+          padding-bottom: 100px;
+        }
 
         a:not(:first-of-type) {
           margin-left: 8px;
