--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -20,6 +20,10 @@
       font-size: 2.8rem;
       margin-top: 40px;
       color: #FD6955;
+
+      @media (max-width: 750px) {
+        font-size: 3rem;
+      }
     }
 
     p {
@@ -30,6 +34,10 @@
       font-size: 2.1rem;
       margin-top: 30px;
       color: #FD6955;
+
+      @media (max-width: 750px) {
+        font-size: 2.6rem;
+      }
     }
   }
 
