--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -4,8 +4,14 @@
   url("../img/backgrounds/contact/blik2.png") no-repeat left 66% top 5%,
   url("../img/backgrounds/contact/balon.png") no-repeat left 75% top 36%,
   linear-gradient(90deg, rgb(255, 133, 55) 0%, rgb(255, 91, 94) 100%);
-  //background-size: auto, auto, auto, auto;
 
+  @media (max-width: 990px) {
+    background: url("../img/backgrounds/contact/blik.png") no-repeat left 10% top 22%,
+    url("../img/backgrounds/contact/blik2.png") no-repeat right 7% top 4%,
+    url("../img/backgrounds/contact/balon.png") no-repeat right 15% top 41%,
+    linear-gradient(90deg, rgb(255, 133, 55) 0%, rgb(255, 91, 94) 100%);
+    background-size: auto, auto, 60px, auto;
+  }
 
   &::before {
     content: '';
@@ -15,11 +21,16 @@
     width: 100%;
     height: 180px;
     background: linear-gradient(90deg, rgb(255, 133, 55) 0%, rgb(255, 91, 94) 100%);
-    mask-image: url('../img/backgrounds/contact/bable.png');
-    mask-repeat: repeat-x;
-    mask-position: bottom;
-    mask-size: contain;
+    mask: url('../img/backgrounds/contact/bable.png') repeat-x center bottom;
+    mask-size: auto;
     z-index: 10;
+
+    @media (max-width: 990px) {
+      top: -212px;
+      height: 212px;
+      mask: url('../img/backgrounds/contact/_contact_mask.png') no-repeat center bottom;
+      mask-size: cover;
+    }
   }
 
 
@@ -31,9 +42,11 @@
     h2 {
       color: #fff;
       padding-top: 81px;
+      margin: 0 10px;
     }
 
     .contact_social {
+
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -41,10 +54,19 @@
       margin-top: 122px;
       margin-bottom: 180px;
 
+      .social_icons {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+      }
+
       .social_icon {
         margin: 0 37px;
         width: 73px;
-
+        @media (max-width: 500px) {
+          margin: 0 3.5vw;
+        }
       }
     }
   }
